# E-Semantic

./: .gitattributes  .gitignore  .pylintrc  README.md  behemoth.py  egraph.py  main.py  main_test.py  pyproject.toml  setup.py
.stubs/pycparser/: c_parser.pyi
Classes/: .mypy.ini  arithmetics_graph.py  ast_to_expr.py  aux_types.py  cfg.py  engine.py  file_context.py  gsa_transformer.py  mgsa_transformer.py  parse_file.py  process_file.py  same_processor.py  ssa_graph.py  trace_calculator.py  tree_parser.py  visitors.py
Classes/egraph_elements/: __init__.py  nodes.py  old_rules.py  rules.py  ssa_graph.py  types.py
Classes/graphs/: __init__.py  call_graph.py  cfg.py  graph_viz.py
Classes/process_egraph/: __init__.py  handler_factory.py  handlers.py  handlers_config.py  invoker.py  processor.py
Classes/value_graph_ir/: __init__.py  creator.py  handler_factory.py  handlers.py  handlers_config.py  value_graph.py
Examples/eqClass00/: op_mult_example01.c  op_mult_example03.c  op_mult_example_patter.c  op_sum_example03.c  op_sum_example04.c  op_sum_sample03.c  simple_example01.c  simple_example02.c  simple_example02_wrong_values.c  simple_example03.c  simple_example_pattern.c  simple_sample01.c
Examples/eqClass01/: example01.c  example02.c  example03.c  example04.c  sample01.c  sample02.c  sample03.c
Examples/eqClass02/: two_guards_example01.c  two_guards_example02.c
Examples/eqClass03/: merged_and_example01.c  merged_and_example02.c  merged_or_example01.c  merged_or_example02.c  two_guards_example02.c
Examples/eqClass04/: two_fors_example01.c  two_fors_example02.c  two_fors_sample02.c
Examples/eqClass05/: exchange_if_for_example01.c  sample02.c
Pattern/: Untitled  Untitled.c  same_rules.h.c
Tests/: conftest.py  test_process_egraph.py  test_process_file.py  utils.py
docs/: NewPlan.md  Plan.md  REFERENCES.md  SteppingStones.md  references.md  references_analysis.md
docs/Drafts/: Project.aux  (+3 more)
(+89 files in other folders)
