[tool.poetry]
name = "samerules"
version = "0.1.0"
description = "\"Thesis Project based on creating a program capable of finding a code snippet within a C program using E-Graphs\""
authors = ["Juan Ignacio Cortez <jicortez97@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
egglog = "^8.0.1"
schema = "^0.7.7"
rustworkx = "^0.17.0"

# Parser
llvm_parser =  { version = "0.1.0", source = "llvm_parser" }

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[[tool.poetry.source]]
name = "pypi_org"
url = "https://pypi.org/simple/"

[[tool.poetry.source]]
name = "llvm_parser"
url = "https://gitlab.com/api/v4/projects/67808923/packages/pypi/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
